[package]
name = "matrirc"
edition = "2021"
version = "0.1.0"
description = "An ircd to matrix gateway"
authors = ["Dominique Martinet <asmadeus@codewreck.org>"]
license = "WTFPLv2"
keywords = ["irc", "matrix"]
repository = "https://github.com/martinetd/matrirc"
readme = "README.md"

[dependencies]
anyhow = "1.0"
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.21"
base64-serde = "0.7"
chacha20poly1305 = { version = "0.9.0", features = ["alloc"], default-features = false }
clap = { version = "4.3.0", features = ["derive"] }
env_logger = "0.10"
futures = "0.3"
# irc: tokio util codec 0.7 support not released
irc = { version = "0.15", git = "https://github.com/aatxe/irc", rev = "3d037df761b4ec1da6811cc8481c18cfb2799dc7" }
lazy_static = "1.4"
log = "0.4"
# matrix-sdk: 0.6.2 is already old, restart from main
matrix-sdk = { features = ["anyhow"], git = "https://github.com/matrix-org/matrix-rust-sdk", rev = "623ff6fa8308c8f1c91b17082d70df9e53e976cf" }
rand_core = { version = "0.6", features = ["getrandom"] }
regex = "1.8"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.0.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
