[package]
name = "matrirc"
edition = "2021"
version = "0.1.0"
description = "An ircd to matrix gateway"
authors = ["Dominique Martinet <asmadeus@codewreck.org>"]
license = "WTFPLv2"
keywords = ["irc", "matrix"]
repository = "https://github.com/martinetd/matrirc"
readme = "README.md"
rust-version = "1.76" # MSRV

[dependencies]
anyhow = "1.0"
argon2 = { version = "0.5", features = ["std"] }
async-trait = "0.1.68"
base64 = "0.22"
base64-serde = "0.8"
chacha20poly1305 = { version = "0.10", features = ["alloc"], default-features = false }
chrono = { version = "0.4.26", default-features = false, features = ["std"] }
clap = { version = "4.3.0", features = ["derive"] }
emoji = "0.2"
env_logger = "0.11"
futures = "0.3"
irc = "1.0"
lazy_static = "1.4"
log = "0.4"
lru = "0.13"
matrix-sdk = { version = "0.8", features = ["anyhow", "sso-login"] }
percent-encoding = "2.3.1"
rand_core = { version = "0.9", features = ["os_rng"] }
regex = "1.8"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.0.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
